src/objects/Integration_Progress__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Finished_Date__c</fullName>
        <label>Actual Finished Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Actual_Start_Date__c</fullName>
        <label>Actual Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Estimated_Finished_Date__c</fullName>
        <label>Estimated Finished Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Estimated_Start_Date__c</fullName>
        <label>Estimated Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>US</fullName>
                </value>
                <value>
                    <fullName>AU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Step__c</fullName>
        <label>Step</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GDW Integration</fullName>
                </value>
                <value>
                    <fullName>Azure Calculation</fullName>
                </value>
                <value>
                    <fullName>Einstein Analytics</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Integration Progress</label>
    <listViews>
        <fullName>All</fullName>
        <columns>External_Id__c</columns>
        <columns>Status__c</columns>
        <columns>Actual_Finished_Date__c</columns>
        <columns>Estimated_Finished_Date__c</columns>
        <columns>Estimated_Start_Date__c</columns>
        <columns>Actual_Start_Date__c</columns>
        <filterScope>Mine</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>EMEA_from_GDW</fullName>
        <columns>NAME</columns>
        <columns>Actual_Finished_Date__c</columns>
        <columns>Actual_Start_Date__c</columns>
        <columns>Estimated_Finished_Date__c</columns>
        <columns>Estimated_Start_Date__c</columns>
        <columns>External_Id__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>External_Id__c</field>
            <operation>contains</operation>
            <value>Azure-EMEA</value>
        </filters>
        <label>EMEA from GDW</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Integration Progress Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Integration Progresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>